--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,10 +60,12 @@
     "zod": "^3.24.4"
   },
   "scripts": {
-    "start": "craco start",
-     
-    "test": "craco test"
-  },
+  "start": "craco start",
+  "build": "CI=false craco build",
+  "test": "craco test",
+  "eject": "react-scripts eject"
+}
+,
   "browserslist": {
     "production": [
       ">0.2%",
